fiixed mobile styling issue, too long heading

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -121,6 +121,8 @@ main {
 
     h1 {
         font-size: 4rem;
+        overflow-wrap: break-word;
+        hyphens: auto;
         font-weight: 650;
     }
 
